Edited logo. Fixed some alignment. pending. Changes to alignment and contact us update information.

--- a/css/page.css
+++ b/css/page.css
@@ -28,9 +28,11 @@
     font-size: 17px;
     width:220px;
     
+    
 }
 
 img.resize{
+    
     width: 200px;
     height: 50px;
 }
@@ -77,7 +79,7 @@ img.resize{
     color: #e60000;
 }
 .topnav a:first-child:hover {
-    background-color: black;  
+    background-color: lightgray;
 }
 .topnav .icon {
   display: none;
